bpo-30068: add missing iter(self) in _io._IOBase.readlines when hint is present (#1130)